<resources>
    <string name="draft_unassigned_allies">Línea pendiente: %1$s</string>
</resources>
